[package]
name = "key-value-storage"
version = "0.1.0"
edition = "2021"
authors = ["Haziq Kamel - haziqkamel@live.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# Use overflow-checks = true to opt into extra safety checks on arithmetic operations
# Use opt-level = "z" to tell the Rust compiler to optimize for small code size.

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
